0032676: Draw Harness, ViewerTest - fix NULL dereference on vanim -remove